Refactor CF reprocessing